# creating-my-own-pallet-in-full-node

./: .gitignore  .gitlab-ci.yml  Cargo.toml  HEADER-APACHE2  HEADER-GPL3  README.md  customSpecRaw.json
.maintain/: frame-weight-template.hbs  update-copyright.sh
.maintain/docker/: subkey.Dockerfile  substrate.Dockerfile
.maintain/gitlab/: generate_changelog.sh
.maintain/node-template-release/: Cargo.toml
client/allocator/: Cargo.toml
client/api/: Cargo.toml
client/authority-discovery/: Cargo.toml  README.md
client/basic-authorship/: Cargo.toml
client/beefy/: Cargo.toml
client/block-builder/: Cargo.toml
client/chain-spec/: Cargo.toml
client/chain-spec/derive/: Cargo.toml
client/chain-spec/derive/src/: impls.rs  lib.rs
client/cli/: Cargo.toml
client/db/: Cargo.toml
client/executor/: Cargo.toml
client/finality-grandpa/: Cargo.toml
client/informant/: Cargo.toml
client/keystore/: Cargo.toml
client/network/: Cargo.toml  README.md
client/network-gossip/: Cargo.toml
client/offchain/: Cargo.toml
client/peerset/: Cargo.toml
client/proposer-metrics/: Cargo.toml
client/proposer-metrics/src/: lib.rs
client/rpc/: Cargo.toml
client/rpc-api/: Cargo.toml
client/rpc-servers/: Cargo.toml
client/service/: Cargo.toml
client/state-db/: Cargo.toml
client/sync-state-rpc/: Cargo.toml
client/telemetry/: Cargo.toml
client/tracing/: Cargo.toml
client/tracing/proc-macro/: Cargo.toml
client/tracing/proc-macro/src/: lib.rs
client/transaction-pool/: Cargo.toml
client/utils/: Cargo.toml
client/utils/src/: lib.rs  metrics.rs  mpsc.rs  status_sinks.rs
docs/: CONTRIBUTING.adoc  PULL_REQUEST_TEMPLATE.md  README.adoc
frame/assets/: Cargo.toml
frame/atomic-swap/: Cargo.toml
frame/aura/: Cargo.toml
frame/authority-discovery/: Cargo.toml
frame/authorship/: Cargo.toml
frame/babe/: Cargo.toml
frame/bags-list/: Cargo.toml
frame/balances/: Cargo.toml
frame/beefy/: Cargo.toml
frame/beefy-mmr/: Cargo.toml
frame/benchmarking/: Cargo.toml  README.md
frame/bounties/: Cargo.toml
frame/collective/: Cargo.toml
frame/contracts/: CHANGELOG.md  Cargo.toml
frame/democracy/: Cargo.toml
frame/election-provider-support/: Cargo.toml
frame/nft/: Cargo.toml
frame/nft/src/: lib.rs
frame/staking/reward-curve/: Cargo.toml
frame/staking/reward-curve/src/: lib.rs
frame/staking/reward-curve/tests/: test.rs
frame/support/procedural/: Cargo.toml
frame/support/procedural/src/: clone_no_bound.rs  crate_version.rs  debug_no_bound.rs  default_no_bound.rs  key_prefix.rs  lib.rs  match_and_insert.rs  partial_eq_no_bound.rs  transactional.rs
frame/support/procedural/src/construct_runtime/: mod.rs  parse.rs
frame/support/procedural/src/construct_runtime/expand/: call.rs  config.rs  event.rs  inherent.rs  metadata.rs  mod.rs  origin.rs  unsigned.rs
frame/support/procedural/src/pallet/: mod.rs
frame/support/procedural/src/pallet/expand/: call.rs  config.rs  constants.rs  error.rs  event.rs  genesis_build.rs  genesis_config.rs  hooks.rs  inherent.rs  instances.rs  mod.rs  origin.rs  pallet_struct.rs  storage.rs  store_trait.rs  tt_default_parts.rs  type_value.rs  validate_unsigned.rs
frame/support/procedural/src/pallet/parse/: call.rs  config.rs  error.rs  event.rs  extra_constants.rs  genesis_build.rs  genesis_config.rs  helper.rs  hooks.rs  inherent.rs  mod.rs  origin.rs  pallet_struct.rs  storage.rs  type_value.rs  validate_unsigned.rs
frame/support/procedural/src/storage/: getters.rs  instance_trait.rs  metadata.rs  mod.rs  parse.rs  storage_info.rs  storage_struct.rs  store_trait.rs
frame/support/procedural/src/storage/genesis_config/: builder_def.rs  genesis_config_def.rs  mod.rs
frame/support/procedural/tools/: Cargo.toml
frame/support/procedural/tools/derive/: Cargo.toml
frame/support/procedural/tools/derive/src/: lib.rs
frame/support/procedural/tools/src/: lib.rs  syn_ext.rs
primitives/database/: Cargo.toml
primitives/database/src/: error.rs  kvdb.rs  lib.rs  mem.rs
primitives/maybe-compressed-blob/: Cargo.toml
primitives/maybe-compressed-blob/src/: lib.rs
primitives/panic-handler/: Cargo.toml
primitives/panic-handler/src/: lib.rs
primitives/rpc/: Cargo.toml
primitives/rpc/src/: lib.rs  list.rs  number.rs  tracing.rs
primitives/runtime-interface/proc-macro/: Cargo.toml
primitives/runtime-interface/proc-macro/src/: lib.rs  utils.rs
primitives/runtime-interface/proc-macro/src/pass_by/: codec.rs  enum_.rs  inner.rs  mod.rs
primitives/runtime-interface/proc-macro/src/runtime_interface/: bare_function_interface.rs  host_function_interface.rs  mod.rs  trait_decl_impl.rs
primitives/runtime-interface/test-wasm-deprecated/: Cargo.toml
primitives/runtime-interface/test-wasm-deprecated/src/: lib.rs
primitives/std/: Cargo.toml  with_std.rs  without_std.rs
primitives/std/src/: lib.rs
primitives/transaction-pool/: Cargo.toml
primitives/transaction-pool/src/: lib.rs  runtime_api.rs
test-utils/: Cargo.toml
test-utils/client/: Cargo.toml
test-utils/client/src/: client_ext.rs  lib.rs
test-utils/derive/: Cargo.toml
test-utils/derive/src/: lib.rs
test-utils/runtime/: Cargo.toml  build.rs
test-utils/runtime/client/: Cargo.toml
test-utils/runtime/client/src/: block_builder_ext.rs  lib.rs  trait_tests.rs
test-utils/runtime/src/: genesismap.rs  lib.rs  system.rs
test-utils/runtime/transaction-pool/: Cargo.toml
test-utils/runtime/transaction-pool/src/: lib.rs
test-utils/src/: lib.rs
test-utils/test-crate/: Cargo.toml
test-utils/test-crate/src/: main.rs
test-utils/test-runner/: Cargo.toml
test-utils/test-runner/src/: client.rs  host_functions.rs  lib.rs  node.rs  utils.rs
test-utils/tests/: basic.rs  ui.rs
test-utils/tests/ui/: too-many-func-parameters.rs
utils/build-script-utils/: Cargo.toml
utils/build-script-utils/src/: git.rs  lib.rs  version.rs
utils/frame/frame-utilities-cli/: Cargo.toml
utils/frame/frame-utilities-cli/src/: lib.rs  pallet_id.rs
utils/frame/generate-bags/node-runtime/: Cargo.toml
utils/frame/generate-bags/node-runtime/src/: main.rs
(+1070 files in other folders)
