[package]
name = "substrate-test-utils"
version = "4.0.0-dev"
authors = ["Peer Technologies <admin@peer.io>"]
edition = "2021"
license = "Apache-2.0"

repository = "https://github.com/PEER-Inc/blockchain-peer"
description = "peer test utilities"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
futures = "0.3.16"
substrate-test-utils-derive = { version = "0.10.0-dev", path = "./derive" }
tokio = { version = "1.10", features = ["macros", "time"] }

[dev-dependencies]
sc-service = { version = "0.10.0-dev", path = "../client/service" }
trybuild = { version = "1.0.52", features = [ "diff" ] }
