[package]
name = "sc-proposer-metrics"
version = "0.10.0-dev"
authors = ["Peer Technologies <admin@peer.io>"]
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"

repository = "https://github.com/PEER-Inc/blockchain-peer"
description = "Basic metrics for block production."
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
log = "0.4.8"
prometheus-endpoint = { package = "substrate-prometheus-endpoint", path = "../../utils/prometheus", version = "0.10.0-dev"}
