[package]
name = "sc-utils"
version = "4.0.0-dev"
authors = ["Peer Technologies <admin@peer.io>"]
edition = "2021"
license = "Apache-2.0"

repository = "https://github.com/PEER-Inc/blockchain-peer"
description = "I/O for peer runtimes"
readme = "README.md"

[dependencies]
futures = "0.3.9"
lazy_static = "1.4.0"
prometheus = { version = "0.13.0", default-features = false }
futures-timer = "3.0.2"

[features]
default = ["metered"]
metered = []
