[package]
name = "sp-database"
version = "4.0.0-dev"
authors = ["Peer Technologies <admin@peer.io>"]
edition = "2021"
license = "Apache-2.0"

repository = "https://github.com/PEER-Inc/blockchain-peer"
description = "peer database trait."
documentation = "https://docs.rs/sp-database"
readme = "README.md"

[dependencies]
parking_lot = "0.11.1"
kvdb = "0.10.0"

