[package]
name = "sp-panic-handler"
version = "4.0.0-dev"
authors = ["Peer Technologies <admin@peer.io>"]
edition = "2021"
license = "Apache-2.0"

repository = "https://github.com/PEER-Inc/blockchain-peer"
description = "Custom panic hook with bug report link"
documentation = "https://docs.rs/sp-panic-handler"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
backtrace = "0.3.38"
regex = "1.5.4"
lazy_static = "1.4.0"
