[package]
name = "sp-rpc"
version = "4.0.0-dev"
authors = ["Peer Technologies <admin@peer.io>"]
edition = "2021"
license = "Apache-2.0"

repository = "https://github.com/PEER-Inc/blockchain-peer"
description = "peer RPC primitives and utilities."
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
serde = { version = "1.0.126", features = ["derive"] }
sp-core = { version = "4.0.0-dev", path = "../core" }
rustc-hash = "1.1.0"

[dev-dependencies]
serde_json = "1.0.71"
