[package]
name = "sp-transaction-pool"
version = "4.0.0-dev"
authors = ["Peer Technologies <admin@peer.io>"]
edition = "2021"
license = "Apache-2.0"

repository = "https://github.com/PEER-Inc/blockchain-peer"
description = "Transaction pool runtime facing API."
documentation = "https://docs.rs/sp-transaction-pool"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
sp-api = { version = "4.0.0-dev", default-features = false, path = "../api" }
sp-runtime = { version = "4.0.0-dev", default-features = false, path = "../runtime" }

[features]
default = [ "std" ]
std = [
	"sp-api/std",
	"sp-runtime/std",
]
