[package]
name = "substrate-test-utils-derive"
version = "0.10.0-dev"
authors = ["Peer Technologies <admin@peer.io>"]
edition = "2021"
license = "Apache-2.0"

repository = "https://github.com/PEER-Inc/blockchain-peer"
description = "peer test utilities macros"

[dependencies]
quote = "1.0.10"
syn = { version = "1.0.81", features = ["full"] }
proc-macro-crate = "1.1.0"
proc-macro2 = "1.0.29"

[lib]
proc-macro = true
