[package]
name = "substrate-test-utils-test-crate"
version = "0.1.0"
authors = ["Peer Technologies <admin@peer.io>"]
edition = "2021"
license = "Apache-2.0"

repository = "https://github.com/PEER-Inc/blockchain-peer"
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dev-dependencies]
tokio = { version = "1.13", features = ["macros"] }
test-utils = { version = "4.0.0-dev", path = "..", package = "substrate-test-utils" }
sc-service = { version = "0.10.0-dev", path = "../../client/service" }
