[package]
name = "sc-chain-spec-derive"
version = "4.0.0-dev"
authors = ["Peer Technologies <admin@peer.io>"]
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"

repository = "https://github.com/PEER-Inc/blockchain-peer"
description = "Macros to derive chain spec extension traits implementation."

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lib]
proc-macro = true

[dependencies]
proc-macro-crate = "1.1.0"
proc-macro2 = "1.0.29"
quote = "1.0.10"
syn = "1.0.81"

[dev-dependencies]
