[package]
name = "frame-support-procedural"
version = "4.0.0-dev"
authors = ["Peer Technologies <admin@peer.io>"]
edition = "2021"
license = "Apache-2.0"

repository = "https://github.com/PEER-Inc/blockchain-peer"
description = "Proc macro of Support code for the runtime."

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lib]
proc-macro = true

[dependencies]
frame-support-procedural-tools = { version = "4.0.0-dev", path = "./tools" }
proc-macro2 = "1.0.29"
quote = "1.0.10"
Inflector = "0.11.4"
syn = { version = "1.0.81", features = ["full"] }

[features]
default = ["std"]
std = []
