[package]
name = "sp-runtime-interface-proc-macro"
version = "4.0.0-dev"
authors = ["Peer Technologies <admin@peer.io>"]
edition = "2021"
license = "Apache-2.0"

repository = "https://github.com/PEER-Inc/blockchain-peer"
description = "This crate provides procedural macros for usage within the context of the peer runtime interface."
documentation = "https://docs.rs/sp-runtime-interface-proc-macro"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.81", features = ["full", "visit", "fold", "extra-traits"] }
quote = "1.0.10"
proc-macro2 = "1.0.29"
Inflector = "0.11.4"
proc-macro-crate = "1.1.0"
