[package]
name = "sp-runtime-interface-test-wasm-deprecated"
version = "2.0.0"
authors = ["Peer Technologies <admin@peer.io>"]
edition = "2021"
build = "build.rs"
license = "Apache-2.0"

repository = "https://github.com/PEER-Inc/blockchain-peer"
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
sp-runtime-interface = { version = "4.0.0-dev", default-features = false, path = "../" }
sp-std = { version = "4.0.0-dev", default-features = false, path = "../../std" }
sp-io = { version = "4.0.0-dev", default-features = false, path = "../../io" }
sp-core = { version = "4.0.0-dev", default-features = false, path = "../../core" }

[build-dependencies]
substrate-wasm-builder = { version = "5.0.0-dev", path = "../../../utils/wasm-builder" }

[features]
default = [ "std" ]
std = [ "sp-runtime-interface/std", "sp-std/std", "sp-core/std", "sp-io/std" ]
