[package]
name = "substrate-frame-cli"
version = "4.0.0-dev"
authors = ["Peer Technologies <admin@peer.io>"]
edition = "2021"
license = "Apache-2.0"

repository = "https://github.com/PEER-Inc/blockchain-peer"
description = "cli interface for FRAME"
documentation = "https://docs.rs/substrate-frame-cli"
readme = "README.md"

[dependencies]
sp-core = { version = "4.0.0-dev", path = "../../../primitives/core" }
sc-cli = { version = "0.10.0-dev", path = "../../../client/cli" }
sp-runtime = { version = "4.0.0-dev", path = "../../../primitives/runtime" }
structopt = "0.3.25"
frame-system = { version = "4.0.0-dev", path = "../../../frame/system" }
frame-support = { version = "4.0.0-dev", path = "../../../frame/support" }

[dev-dependencies]

[features]
default = []
