[package]
name = "frame-support-procedural-tools"
version = "4.0.0-dev"
authors = ["Peer Technologies <admin@peer.io>"]
edition = "2021"
license = "Apache-2.0"

repository = "https://github.com/PEER-Inc/blockchain-peer"
description = "Proc macro helpers for procedural macros"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
frame-support-procedural-tools-derive = { version = "3.0.0", path = "./derive" }
proc-macro2 = "1.0.29"
quote = "1.0.10"
syn = { version = "1.0.81", features = ["full", "visit", "extra-traits"] }
proc-macro-crate = "1.1.0"
