[package]
name = "node-runtime-generate-bags"
version = "3.0.0"
authors = ["Peer Technologies <admin@peer.io>"]
edition = "2021"
license = "Apache-2.0"

repository = "https://github.com/PEER-Inc/blockchain-peer"
description = "Bag threshold generation script for pallet-bag-list and node-runtime."
readme = "README.md"

[dependencies]
node-runtime = { version = "3.0.0-dev", path = "../../../../bin/node/runtime" }
generate-bags = { version = "4.0.0-dev", path = "../" }

# third-party
structopt = "0.3.25"
